Adicionei o endpoint Atualizar o status do pagamento e adicionei o elemento cliente em pagamento
